add regexp module and test it with partial match examples

--- a/experiments/data_convertion.ipynb
+++ b/experiments/data_convertion.ipynb
@@ -73,8 +73,8 @@
     "            intent_id=i,\n",
     "            intent_name=intent_name,\n",
     "            sample_utterances=[],\n",
-    "            regexp_for_sampling=all_phrases['phrases'],\n",
-    "            regexp_as_rules=all_phrases['reg_phrases'] if 'reg_phrases' in all_phrases else []\n",
+    "            regexp_full_match=all_phrases['phrases'],\n",
+    "            regexp_partial_match=all_phrases['reg_phrases'] if 'reg_phrases' in all_phrases else []\n",
     "        )\n",
     "        res.append(intent_record)\n",
     "    return res"
@@ -118,8 +118,8 @@
        "      <th>intent_id</th>\n",
        "      <th>intent_name</th>\n",
        "      <th>sample_utterances</th>\n",
-       "      <th>regexp_for_sampling</th>\n",
-       "      <th>regexp_as_rules</th>\n",
+       "      <th>regexp_full_match</th>\n",
+       "      <th>regexp_partial_match</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -328,7 +328,7 @@
        "20         20                  doing_well                []   \n",
        "21         21                   what_time                []   \n",
        "\n",
-       "                                  regexp_for_sampling  \\\n",
+       "                                  regexp_full_match  \\\n",
        "0   [(alexa ){0,1}what are ((you)|(we)) ((talking ...   \n",
        "1   [(that's ){0,1}enough( talking ){0,1} about ((...   \n",
        "2   [(stop ){0,1}(((let's )|(i want to )|(wanna )|...   \n",
@@ -352,7 +352,7 @@
        "20  [doing ((fine)|(great)|(cool)|(okay))( ((thank...   \n",
        "21  [can you tell me the time, what(('s)|( is)|())...   \n",
        "\n",
-       "                                      regexp_as_rules  \n",
+       "                                      regexp_partial_match  \n",
        "0   [(alexa ){0,1}are we having a communication pr...  \n",
        "1   [tell me something else, don't tell me about ....  \n",
        "2   [.*let(('s)|(s)) ((chat)|(talk)) ((to|with) (m...  \n",
@@ -426,8 +426,8 @@
        "      <th>intent_id</th>\n",
        "      <th>intent_name</th>\n",
        "      <th>sample_utterances</th>\n",
-       "      <th>regexp_for_sampling</th>\n",
-       "      <th>regexp_as_rules</th>\n",
+       "      <th>regexp_full_match</th>\n",
+       "      <th>regexp_partial_match</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -555,7 +555,7 @@
        "11         11                who_made_you                []   \n",
        "12         12            what_is_your_job                []   \n",
        "\n",
-       "                                  regexp_for_sampling  \\\n",
+       "                                  regexp_full_match  \\\n",
        "0   [о ((чем)|(чём)) ты( говоришь){0,1}( вообще){0...   \n",
        "1   [((хватит)|(прекрати)|(не хочу)|(не хочу больш...   \n",
        "2   [((можем)|(можешь)|(давай))(( мы)|( ты)|( я)){...   \n",
@@ -570,7 +570,7 @@
        "11  [кто(( тебя)|( тобой)){0,1} ((сделал)|(создал)...   \n",
        "12  [((какой)|(какая)) ((у тебя)|(твоя)) ((професс...   \n",
        "\n",
-       "                                      regexp_as_rules  \n",
+       "                                      regexp_partial_match  \n",
        "0   [о ((чем)|(чём)) ты( говоришь){0,1}( вообще){0...  \n",
        "1   [((хватит)|(прекрати)|(не хочу)|(не хочу больш...  \n",
        "2   [((можем)|(можешь)|(давай))(( мы)|( ты)|( я)){...  \n",
@@ -728,8 +728,8 @@
     "        'intent_id': i,\n",
     "        'intent_name': name,\n",
     "        'sample_utterances': [],\n",
-    "        'regexp_for_sampling': [],\n",
-    "        'regexp_as_rules': []\n",
+    "        'regexp_full_match': [],\n",
+    "        'regexp_partial_match': []\n",
     "    } for i, name in enumerate(intent_names)]\n",
     "\n",
     "\n",
@@ -767,8 +767,8 @@
        "  'I want to start using my card.',\n",
        "  'How do I verify my new card?',\n",
        "  \"I tried activating my plug-in and it didn't piece of work\"],\n",
-       " 'regexp_for_sampling': [],\n",
-       " 'regexp_as_rules': []}"
+       " 'regexp_full_match': [],\n",
+       " 'regexp_partial_match': []}"
       ]
      },
      "execution_count": 17,
@@ -811,8 +811,8 @@
        "  'I want to start using my card.',\n",
        "  'How do I verify my new card?',\n",
        "  \"I tried activating my plug-in and it didn't piece of work\"],\n",
-       " 'regexp_for_sampling': [],\n",
-       " 'regexp_as_rules': []}"
+       " 'regexp_full_match': [],\n",
+       " 'regexp_partial_match': []}"
       ]
      },
      "execution_count": 5,
@@ -975,8 +975,8 @@
        "  'Я хочу начать пользоваться своей картой.',\n",
        "  'Как мне проверить мою новую карту?',\n",
        "  'Я попытался активировать свой плагин, и это не сработало.'],\n",
-       " 'regexp_for_sampling': [],\n",
-       " 'regexp_as_rules': []}"
+       " 'regexp_full_match': [],\n",
+       " 'regexp_partial_match': []}"
       ]
      },
      "execution_count": 24,
@@ -1142,8 +1142,8 @@
     "        'intent_id': i,\n",
     "        'intent_name': name,\n",
     "        'sample_utterances': [],\n",
-    "        'regexp_for_sampling': [],\n",
-    "        'regexp_as_rules': []\n",
+    "        'regexp_full_match': [],\n",
+    "        'regexp_partial_match': []\n",
     "    } for name, i in name_to_id.items()]\n",
     "\n",
     "\n",
@@ -1182,8 +1182,8 @@
        "  'does redrobin take reservations',\n",
        "  'are reservations taken at redrobin',\n",
        "  'does redrobin do reservations'],\n",
-       " 'regexp_for_sampling': [],\n",
-       " 'regexp_as_rules': []}"
+       " 'regexp_full_match': [],\n",
+       " 'regexp_partial_match': []}"
       ]
      },
      "execution_count": 31,
@@ -1405,8 +1405,8 @@
        "  'First time at Extreme Pita.  It is a little different than Pita Pit. I had the small smoked turkey and my husband had the buffalo chick.  Was not impressed with the food nor the staff. Not sure we will go back.',\n",
        "  \"I love both locations equally. Such a delicious cafe caramel. I also really love their tea selections. The baristas are always friendly, and there's always a place to sit. What more can you ask for? :)\",\n",
        "  \"Went here with my roommate last week for a late breakfast and was pleasantly surprised! I got the Eggs Benedict and a chocolate croissant while my roommate went for the French toast with fresh fruit. Everything was very tasty, although my roommate could have easily handled a larger portion. \\\\nAll the employees were super sweet and the French owner's eclectic playlist really added to how much I enjoyed the experience. Will have to go again for lunch or dinner!\"],\n",
-       " 'regexp_for_sampling': [],\n",
-       " 'regexp_as_rules': []}"
+       " 'regexp_full_match': [],\n",
+       " 'regexp_partial_match': []}"
       ]
      },
      "execution_count": 32,
@@ -1564,8 +1564,8 @@
     "        'intent_id': i,\n",
     "        'intent_name': None,\n",
     "        'sample_utterances': [],\n",
-    "        'regexp_for_sampling': [],\n",
-    "        'regexp_as_rules': []\n",
+    "        'regexp_full_match': [],\n",
+    "        'regexp_partial_match': []\n",
     "    } for i in range(150)]\n",
     "\n",
     "\n",
@@ -1581,8 +1581,8 @@
     "        'intent_id': -1,\n",
     "        'intent_name': \"ood\",\n",
     "        'sample_utterances': oos_samples['text'],\n",
-    "        'regexp_for_sampling': [],\n",
-    "        'regexp_as_rules': []\n",
+    "        'regexp_full_match': [],\n",
+    "        'regexp_partial_match': []\n",
     "    })\n",
     "\n",
     "    return res"
@@ -1641,8 +1641,8 @@
        "  'как выглядят пончики отзывы в tgi',\n",
        "  'какие отзывы о пончиках в тги',\n",
        "  'Люди рекомендуют пончики в TGI'],\n",
-       " 'regexp_for_sampling': [],\n",
-       " 'regexp_as_rules': []}"
+       " 'regexp_full_match': [],\n",
+       " 'regexp_partial_match': []}"
       ]
      },
      "execution_count": 53,
@@ -1914,8 +1914,8 @@
        "  'Что такое альма-матер человека, который начал YouTube',\n",
        "  'У кого больше всего подписчиков на YouTube',\n",
        "  'у тех, на кого я подписана, есть новые видео'],\n",
-       " 'regexp_for_sampling': [],\n",
-       " 'regexp_as_rules': []}"
+       " 'regexp_full_match': [],\n",
+       " 'regexp_partial_match': []}"
       ]
      },
      "execution_count": 54,
@@ -2094,8 +2094,8 @@
     "        'intent_id': i,\n",
     "        'intent_name': name,\n",
     "        'sample_utterances': [],\n",
-    "        'regexp_for_sampling': [],\n",
-    "        'regexp_as_rules': []\n",
+    "        'regexp_full_match': [],\n",
+    "        'regexp_partial_match': []\n",
     "    } for i, name in enumerate(intent_names)]\n",
     "\n",
     "\n",
@@ -2238,8 +2238,8 @@
     "        'intent_id': i,\n",
     "        'intent_name': name,\n",
     "        'sample_utterances': [],\n",
-    "        'regexp_for_sampling': [],\n",
-    "        'regexp_as_rules': []\n",
+    "        'regexp_full_match': [],\n",
+    "        'regexp_partial_match': []\n",
     "    } for i, name in enumerate(intent_names)]\n",
     "\n",
     "\n",
@@ -2382,8 +2382,8 @@
     "        'intent_id': i,\n",
     "        'intent_name': name,\n",
     "        'sample_utterances': [],\n",
-    "        'regexp_for_sampling': [],\n",
-    "        'regexp_as_rules': []\n",
+    "        'regexp_full_match': [],\n",
+    "        'regexp_partial_match': []\n",
     "    } for i, name in enumerate(intent_names)]\n",
     "\n",
     "    for txt, name in zip(hwu_utterances, hwu_labels):\n",
@@ -2523,8 +2523,8 @@
     "        'intent_id': i,\n",
     "        'intent_name': name,\n",
     "        'sample_utterances': [],\n",
-    "        'regexp_for_sampling': [],\n",
-    "        'regexp_as_rules': []\n",
+    "        'regexp_full_match': [],\n",
+    "        'regexp_partial_match': []\n",
     "    } for i, name in enumerate(intent_names)]\n",
     "\n",
     "\n",
@@ -2665,8 +2665,8 @@
     "        'intent_id': i,\n",
     "        'intent_name': None,\n",
     "        'sample_utterances': [],\n",
-    "        'regexp_for_sampling': [],\n",
-    "        'regexp_as_rules': []\n",
+    "        'regexp_full_match': [],\n",
+    "        'regexp_partial_match': []\n",
     "    } for i in range(14)]\n",
     "\n",
     "\n",
@@ -2704,8 +2704,8 @@
        "  'Здравствуйте Через несколько дней я уезжаю в швецию на целый месяц я хотел бы узнать Могу ли я платить моей карты Спасибо',\n",
        "  'Здравствуйте я уезжаю на несколько недель заграницу и хотела бы узнать Могу ли я пользоваться твоей картой там Я бы хотела оплачивать покупки в Америке Нужно ли мне что-нибудь для этого делать',\n",
        "  'Здравствуйте мне хотелось бы задать вам один вопрос я уезжаю в отпуск и мне нужно уточнить работать будет ли моя кредитная карточка За границей'],\n",
-       " 'regexp_for_sampling': [],\n",
-       " 'regexp_as_rules': []}"
+       " 'regexp_full_match': [],\n",
+       " 'regexp_partial_match': []}"
       ]
      },
      "execution_count": 92,
@@ -2744,8 +2744,8 @@
     "        'intent_id': i,\n",
     "        'intent_name': None,\n",
     "        'sample_utterances': [],\n",
-    "        'regexp_for_sampling': [],\n",
-    "        'regexp_as_rules': []\n",
+    "        'regexp_full_match': [],\n",
+    "        'regexp_partial_match': []\n",
     "    } for i in range(14)]\n",
     "\n",
     "\n",
@@ -2783,8 +2783,8 @@
        "  'Hello In a few days I am leaving for sweden for a whole month I would like to know if I can pay with my card Thank you',\n",
        "  'Hello, I am going abroad for a few weeks and would like to know Can I use your card there I would like to pay for purchases in America Do I need to do anything for this',\n",
        "  'Hello, I would like to ask you one question, I am going on vacation and I need to clarify whether my credit card will work abroad'],\n",
-       " 'regexp_for_sampling': [],\n",
-       " 'regexp_as_rules': []}"
+       " 'regexp_full_match': [],\n",
+       " 'regexp_partial_match': []}"
       ]
      },
      "execution_count": 96,
@@ -3059,8 +3059,8 @@
     "        'intent_id': i,\n",
     "        'intent_name': name,\n",
     "        'sample_utterances': [],\n",
-    "        'regexp_for_sampling': [],\n",
-    "        'regexp_as_rules': []\n",
+    "        'regexp_full_match': [],\n",
+    "        'regexp_partial_match': []\n",
     "    } for i, name in enumerate(intent_names)]\n",
     "\n",
     "\n",
@@ -3099,8 +3099,8 @@
        "  'do i have any alarms',\n",
        "  'show alarms',\n",
        "  'do i have an alarm set for morning flight'],\n",
-       " 'regexp_for_sampling': [],\n",
-       " 'regexp_as_rules': []}"
+       " 'regexp_full_match': [],\n",
+       " 'regexp_partial_match': []}"
       ]
      },
      "execution_count": 110,
@@ -3338,8 +3338,8 @@
        "  'у меня есть какие-то будильники',\n",
        "  'покажи будильники',\n",
        "  'имею ли я будильник на утренний рейс'],\n",
-       " 'regexp_for_sampling': [],\n",
-       " 'regexp_as_rules': []}"
+       " 'regexp_full_match': [],\n",
+       " 'regexp_partial_match': []}"
       ]
      },
      "execution_count": 115,
