test multilabel classification on dstc and robotic intents

--- a/experiments/data_convertion.ipynb
+++ b/experiments/data_convertion.ipynb
@@ -3694,7 +3694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -3712,7 +3712,7 @@
        "})"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3726,7 +3726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3748,7 +3748,7 @@
        " 'thankyou': 13}"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3762,34 +3762,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e3eeaf706bd44d93a4135033844dfa21",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "dict_keys(['session', 'caller', 'turn', 'transcript', 'audio', 'intent', 'slots', 'cam'])"
+       "Filter:   0%|          | 0/18715 [00:00<?, ? examples/s]"
       ]
      },
-     "execution_count": 133,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['session', 'caller', 'turn', 'transcript', 'audio', 'intent', 'slots', 'cam'],\n",
+       "    num_rows: 1\n",
+       "})"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dstc3['test'].features.keys()"
+    "dstc3[\"test\"].filter(lambda example: \"reqmore\" in example[\"intent\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ack': 0,\n",
+       " 'affirm': 1,\n",
+       " 'bye': 2,\n",
+       " 'confirm': 3,\n",
+       " 'deny': 4,\n",
+       " 'hello': 5,\n",
+       " 'inform': 6,\n",
+       " 'negate': 7,\n",
+       " 'repeat': 8,\n",
+       " 'reqalts': 9,\n",
+       " 'request': 10,\n",
+       " 'restart': 11,\n",
+       " 'thankyou': 12}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intent_names.remove(\"reqmore\")\n",
+    "name_to_id = {name: i for i, name in enumerate(intent_names)}\n",
+    "name_to_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9a149e25f8bb47708c1b38c06a81dc58",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/18715 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def transform(example: dict):\n",
     "    return dict(\n",
     "        utterance=example[\"transcript\"],\n",
-    "        labels=[name_to_id[intent_name] for intent_name in example[\"intent\"]]\n",
+    "        labels=[name_to_id[intent_name] for intent_name in example[\"intent\"] if intent_name != \"reqmore\"]\n",
     "    )\n",
     "\n",
     "multilabel_dstc = dstc3['test'].map(transform, remove_columns=dstc3['test'].features.keys())"
@@ -3797,7 +3863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3806,7 +3872,7 @@
        "{'utterance': 'sil', 'labels': []}"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3817,7 +3883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3829,7 +3895,7 @@
        "})"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3840,16 +3906,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ab2bed948e0847798edf01e5482d6dd4",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "1866002"
+       "Creating json from Arrow format:   0%|          | 0/19 [00:00<?, ?ba/s]"
       ]
      },
-     "execution_count": 138,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1865988"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
