implement mutual exclusive intents tagging

--- a/experiments/data_convertion.ipynb
+++ b/experiments/data_convertion.ipynb
@@ -3689,6 +3689,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## AC Robotic (new version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18, 3)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "robotic_data = json.load(open('../data/ac_robotic_2_raw.json'))\n",
+    "robotic_intents = robotic_data[\"intents\"]\n",
+    "robotic_tags = robotic_data[\"tags\"]\n",
+    "len(robotic_intents), len(robotic_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['GO',\n",
+       " 'disable_autopilot',\n",
+       " 'drop',\n",
+       " 'enable_autopilot',\n",
+       " 'go_to',\n",
+       " 'move_backward',\n",
+       " 'move_forward',\n",
+       " 'pick_up',\n",
+       " 'place',\n",
+       " 'say',\n",
+       " 'set_point',\n",
+       " 'sit_down',\n",
+       " 'stand_up',\n",
+       " 'status',\n",
+       " 'stop',\n",
+       " 'turn_left',\n",
+       " 'turn_right',\n",
+       " 'world_state']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intent_names = sorted(set(record[\"name\"] for record in robotic_intents))\n",
+    "intent_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'GO': 0,\n",
+       " 'disable_autopilot': 1,\n",
+       " 'drop': 2,\n",
+       " 'enable_autopilot': 3,\n",
+       " 'go_to': 4,\n",
+       " 'move_backward': 5,\n",
+       " 'move_forward': 6,\n",
+       " 'pick_up': 7,\n",
+       " 'place': 8,\n",
+       " 'say': 9,\n",
+       " 'set_point': 10,\n",
+       " 'sit_down': 11,\n",
+       " 'stand_up': 12,\n",
+       " 'status': 13,\n",
+       " 'stop': 14,\n",
+       " 'turn_left': 15,\n",
+       " 'turn_right': 16,\n",
+       " 'world_state': 17}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_to_id = {name: i for i, name in enumerate(intent_names)}\n",
+    "name_to_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for intent in robotic_intents:\n",
+    "    intent[\"intent_id\"] = name_to_id[intent[\"name\"]]\n",
+    "    intent[\"intent_name\"] = intent.pop(\"name\")\n",
+    "    intent[\"sample_utterances\"] = []\n",
+    "    intent[\"regexp_full_match\"] = intent.pop(\"phrases\")\n",
+    "    intent[\"regexp_partial_match\"] = intent.pop(\"reg_phrases\")\n",
+    "    intent.pop(\"punctuation\")\n",
+    "    intent.pop(\"min_precision\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tags': ['movement_direction'],\n",
+       " 'intent_id': 6,\n",
+       " 'intent_name': 'move_forward',\n",
+       " 'sample_utterances': [],\n",
+       " 'regexp_full_match': ['(пожалуйста(,){0,1} ){0,1}((проедь)|(проезжай)|(едь)|(езжай)|(двигайся)|(подвинься)|(продвигайся)|(отъедь)|(отъезжай)) ((вперёд)|(вперед)|(по прямой)|(прямо)) (на ){0,1}((2)|(три)|(17)|(десять)){0,1}( метров){0,1}',\n",
+       "  '(пожалуйста(,){0,1} ){0,1}((проедь)|(проезжай)|(едь)|(езжай)|(двигайся)|(подвинься)|(продвигайся)|(отъедь)|(отъезжай)) ((вперёд)|(вперед)|(по прямой)|(прямо)) (на ){0,1}((10)|(десять)){0,1}( метров){0,1}(, если можешь){0,1}',\n",
+       "  '((тебе ((надо)|(следует)|(стоит))|ты (можешь|мог бы|не мог бы)) ){0,1}((проехать)|(отъехать)|(доехать)|(продвинуться)|(подвинуться)) ((вперёд)|(вперед)|(по прямой)|(прямо)) (на ){0,1}((6)|(пять)){0,1}( метров){0,1}',\n",
+       "  '(робот(,){0,1} ){0,1}(пожалуйста(,){0,1} ){0,1}((проедь)|(проезжай)|(едь)|(езжай)|(двигайся)|(подвинься)|(продвигайся)) (на ){0,1}((7)|(четыре)|(11)|(двенадцать)){0,1}( метров){0,1}',\n",
+       "  'было бы хорошо, если бы ты ((проехал)|(продвинулся)|(подвинулся)|(отъехал)) ((вперёд)|(вперед)|(по прямой)|(прямо)) (на ){0,1}((20)|(семь)|(11)|(одиннадцать)){0,1}( метров){0,1}'],\n",
+       " 'regexp_partial_match': ['(?i)(?:пожалуйста,?\\\\s*)?(?:робот,?\\\\s*)?(?:(?:про|по)?ед(?:ь(?:те)?|у)|(?:про|по)?езжай(?:те)?|двигай(?:ся|тесь)|(?:про|под)вин(?:ь(?:ся|тесь)|усь)|отъ?езжай(?:те)?)\\\\s+(?:вперёд|вперед|прямо|по\\\\s+прямой)(?:\\\\s+на\\\\s+(?:\\\\d+|[а-я]+)\\\\s*(?:метр(?:ов|а)?|м\\\\.?|шаг(?:ов|а)?))?(?:,?\\\\s*если\\\\s+можешь)?',\n",
+       "  '(?i)(?:(?:не\\\\s+)?мог(?:\\\\s+бы)?\\\\s+(?:ли\\\\s+)?(?:ты|вы)|(?:ты\\\\s+)?(?:не\\\\s+)?мо(?:жешь|г(?:ла|ли)\\\\s+бы)|способен\\\\s+ли\\\\s+ты)\\\\s+(?:про|по)?ехать\\\\s+(?:вперёд|вперед|прямо|по\\\\s+прямой)(?:\\\\s+на\\\\s+(?:\\\\d+|[а-я]+)\\\\s*(?:метр(?:ов|а)?|м\\\\.?|шаг(?:ов|а)?))?',\n",
+       "  '(?i)(?:тебе\\\\s+(?:надо|следует|стоит)|нужно|необходимо|требуется|следует)\\\\s+(?:про|по)?ехать\\\\s+(?:вперёд|вперед|прямо|по\\\\s+прямой)(?:\\\\s+на\\\\s+(?:\\\\d+|[а-я]+)\\\\s*(?:метр(?:ов|а)?|м\\\\.?|шаг(?:ов|а)?))?',\n",
+       "  '(?i)(?:хорошо\\\\s+бы|было\\\\s+бы\\\\s+(?:неплохо|здорово|хорошо))(?:,?\\\\s*если\\\\s+бы)?\\\\s+(?:ты\\\\s+)?(?:про|по|под)?(?:ехал(?:а)?|двинул(?:ся|ась))\\\\s+(?:вперёд|вперед|прямо|по\\\\s+прямой)(?:\\\\s+на\\\\s+(?:\\\\d+|[а-я]+)\\\\s*(?:метр(?:ов|а)?|м\\\\.?|шаг(?:ов|а)?))?']}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "robotic_intents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json.dump(robotic_intents, open('../data/intent_records/ac_robotic_new.json', 'w'), indent=4, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## dstc3"
    ]
   },
