implement evaluation with a given test data

--- a/experiments/data_convertion.ipynb
+++ b/experiments/data_convertion.ipynb
@@ -5052,6 +5052,317 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## robotics validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open('../data/robotics_val.csv', mode='r', newline='') as file:\n",
+    "    csv_reader = csv.DictReader(file)\n",
+    "    robotics_val = list(csv_reader)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(robotics_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'text': 'пожалуйста, проедь вперед на 20 метров', 'intents': 'move_forward'},\n",
+       " {'text': 'тебе стоит отъехать назад 5 метров', 'intents': 'move_backward'},\n",
+       " {'text': 'иди на расстояние', 'intents': 'GO'},\n",
+       " {'text': 'подними этот стул, пожалуйста', 'intents': 'pick_up'},\n",
+       " {'text': 'поставь эту коробку в угол', 'intents': 'place drop'},\n",
+       " {'text': 'повтори за мной, пожалуйста', 'intents': 'say'},\n",
+       " {'text': 'можешь сесть рядом', 'intents': 'sit_down'},\n",
+       " {'text': 'встань, пожалуйста', 'intents': 'stand_up'},\n",
+       " {'text': 'прекрати шуметь', 'intents': 'stop'},\n",
+       " {'text': 'можешь завернуть направо', 'intents': 'turn_right'}]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "robotics_val[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_intent_field(record: dict):\n",
+    "    record[\"intents_splitted\"] = record[\"intents\"].split()\n",
+    "\n",
+    "for rec in robotics_val:\n",
+    "    split_intent_field(rec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'text': 'пожалуйста, проедь вперед на 20 метров',\n",
+       "  'intents': 'move_forward',\n",
+       "  'intents_splitted': ['move_forward']},\n",
+       " {'text': 'тебе стоит отъехать назад 5 метров',\n",
+       "  'intents': 'move_backward',\n",
+       "  'intents_splitted': ['move_backward']},\n",
+       " {'text': 'иди на расстояние', 'intents': 'GO', 'intents_splitted': ['GO']},\n",
+       " {'text': 'подними этот стул, пожалуйста',\n",
+       "  'intents': 'pick_up',\n",
+       "  'intents_splitted': ['pick_up']},\n",
+       " {'text': 'поставь эту коробку в угол',\n",
+       "  'intents': 'place drop',\n",
+       "  'intents_splitted': ['place', 'drop']},\n",
+       " {'text': 'повтори за мной, пожалуйста',\n",
+       "  'intents': 'say',\n",
+       "  'intents_splitted': ['say']},\n",
+       " {'text': 'можешь сесть рядом',\n",
+       "  'intents': 'sit_down',\n",
+       "  'intents_splitted': ['sit_down']},\n",
+       " {'text': 'встань, пожалуйста',\n",
+       "  'intents': 'stand_up',\n",
+       "  'intents_splitted': ['stand_up']},\n",
+       " {'text': 'прекрати шуметь', 'intents': 'stop', 'intents_splitted': ['stop']},\n",
+       " {'text': 'можешь завернуть направо',\n",
+       "  'intents': 'turn_right',\n",
+       "  'intents_splitted': ['turn_right']}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "robotics_val[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['GO',\n",
+       " 'disable_autopilot',\n",
+       " 'drop',\n",
+       " 'enable_autopilot',\n",
+       " 'go_to',\n",
+       " 'move_backward',\n",
+       " 'move_forward',\n",
+       " 'pick_up',\n",
+       " 'place',\n",
+       " 'say',\n",
+       " 'set_point',\n",
+       " 'sit_down',\n",
+       " 'stand_up',\n",
+       " 'status',\n",
+       " 'stop',\n",
+       " 'turn_left',\n",
+       " 'turn_right',\n",
+       " 'undefined',\n",
+       " 'world_state']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import itertools as it\n",
+    "\n",
+    "intent_names = sorted(set(it.chain.from_iterable(rec[\"intents_splitted\"] for rec in robotics_val)))\n",
+    "intent_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "в тестовой выборке есть класс `undefined`, видимо это OOS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'text': 'Посчитай количество объектов в комнате', 'intents': 'undefined', 'intents_splitted': ['undefined']}\n",
+      "{'text': 'Измерь расстояние до ближайшей стены', 'intents': 'undefined', 'intents_splitted': ['undefined']}\n",
+      "{'text': 'Воспроизведи аудиофайл из моей библиотеки', 'intents': 'undefined', 'intents_splitted': ['undefined']}\n",
+      "{'text': 'Запиши видео своего движения', 'intents': 'undefined', 'intents_splitted': ['undefined']}\n",
+      "{'text': 'Активируй режим экономии энергии', 'intents': 'undefined', 'intents_splitted': ['undefined']}\n",
+      "{'text': 'Синхронизируй данные с облачным хранилищем', 'intents': 'undefined', 'intents_splitted': ['undefined']}\n",
+      "{'text': 'Проведи калибровку сенсоров', 'intents': 'undefined', 'intents_splitted': ['undefined']}\n",
+      "{'text': 'Опусти левую руку и подними правую', 'intents': 'undefined', 'intents_splitted': ['undefined']}\n",
+      "{'text': 'Подними руку и помаши', 'intents': 'undefined', 'intents_splitted': ['undefined']}\n",
+      "{'text': 'Выключи свет в комнате', 'intents': 'undefined', 'intents_splitted': ['undefined']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for rec in robotics_val:\n",
+    "    if \"undefined\" in rec[\"intents_splitted\"]:\n",
+    "        print(rec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "надо сделать метки для интентов, консистентные с метками в тренировочной выборке"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intent_names.remove('undefined')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'GO': 0,\n",
+       " 'disable_autopilot': 1,\n",
+       " 'drop': 2,\n",
+       " 'enable_autopilot': 3,\n",
+       " 'go_to': 4,\n",
+       " 'move_backward': 5,\n",
+       " 'move_forward': 6,\n",
+       " 'pick_up': 7,\n",
+       " 'place': 8,\n",
+       " 'say': 9,\n",
+       " 'set_point': 10,\n",
+       " 'sit_down': 11,\n",
+       " 'stand_up': 12,\n",
+       " 'status': 13,\n",
+       " 'stop': 14,\n",
+       " 'turn_left': 15,\n",
+       " 'turn_right': 16,\n",
+       " 'world_state': 17}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_to_id = {name: i for i, name in enumerate(intent_names)}\n",
+    "name_to_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "robotics_val_converted = []\n",
+    "for rec in robotics_val:\n",
+    "    robotics_val_converted.append({\n",
+    "        \"utterance\": rec[\"text\"],\n",
+    "        \"labels\": [name_to_id[name] for name in rec[\"intents_splitted\"] if name != \"undefined\"]\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'utterance': 'пожалуйста, проедь вперед на 20 метров', 'labels': [6]},\n",
+       " {'utterance': 'тебе стоит отъехать назад 5 метров', 'labels': [5]},\n",
+       " {'utterance': 'иди на расстояние', 'labels': [0]},\n",
+       " {'utterance': 'подними этот стул, пожалуйста', 'labels': [7]},\n",
+       " {'utterance': 'поставь эту коробку в угол', 'labels': [8, 2]},\n",
+       " {'utterance': 'повтори за мной, пожалуйста', 'labels': [9]},\n",
+       " {'utterance': 'можешь сесть рядом', 'labels': [11]},\n",
+       " {'utterance': 'встань, пожалуйста', 'labels': [12]},\n",
+       " {'utterance': 'прекрати шуметь', 'labels': [14]},\n",
+       " {'utterance': 'можешь завернуть направо', 'labels': [16]}]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "robotics_val_converted[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "json.dump(robotics_val_converted, open(\"../data/intent_records/ac_robotic_val.json\", 'w'), indent=4, ensure_ascii=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
